external css file delete

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="example.css" media=”screen” />
     <script src="script1.js"></script>
     <style media="screen">
+        html{
+          font-family: 'Common Pixel', sans-serif;
+          overflow: hidden;
+        }
         .look{
           height: 100px;
           position: relative;
