--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Dekko' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-    <script src="script1.js"></script>
+    <script src="mess-del-ani.js"></script>
     <style media="screen">
         html{
           font-family: 'Common Pixel', sans-serif;
